로그인폼, 정보수정폼, 회원가입 기능, 로그인 기능, 로그아웃 기능

--- a/MyProject/src/main/webapp/WEB-INF/web.xml
+++ b/MyProject/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,6 @@
 
 	<servlet-mapping>
 		<servlet-name>UserController</servlet-name>
-		<url-pattern>/pages/account/*</url-pattern>
+		<url-pattern>*.user</url-pattern>
 	</servlet-mapping>
 </web-app>
