--- a/MyProject/src/main/webapp/WEB-INF/web.xml
+++ b/MyProject/src/main/webapp/WEB-INF/web.xml
@@ -4,9 +4,19 @@
 		<servlet-name>UserController</servlet-name>
 		<servlet-class>mvc.user.controller.UserController</servlet-class>
 	</servlet>
+	
+	<servlet>
+		<servlet-name>BoardController</servlet-name>
+		<servlet-class>mvc.board.controller.BoardController</servlet-class>
+	</servlet>
 
 	<servlet-mapping>
 		<servlet-name>UserController</servlet-name>
 		<url-pattern>*.user</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>BoardController</servlet-name>
+		<url-pattern>*.board</url-pattern>
 	</servlet-mapping>
 </web-app>
