게시판 기능 완성

--- a/MyProject/src/main/webapp/WEB-INF/web.xml
+++ b/MyProject/src/main/webapp/WEB-INF/web.xml
@@ -18,5 +18,6 @@
 	<servlet-mapping>
 		<servlet-name>BoardController</servlet-name>
 		<url-pattern>*.board</url-pattern>
+		<url-pattern>/pages/main/main.jsp</url-pattern>
 	</servlet-mapping>
 </web-app>
